making review forms dynamic
